# Beacon

./: .gitignore  Cargo.toml  README.md
beacon/: Cargo.toml
beacon-controller/: Cargo.toml
beacon-controller/docs/: routes
beacon-controller/src/: controllers.rs  kv.rs  lib.rs  models.rs  repository.rs
beacon/src/: lib.rs  main.rs
