[package]
name = "beacon-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
anyhow = "1.0.66"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"

[[bin]]
name = "main"